--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -264,8 +264,7 @@ jobs:
           do
             export SOURCE=$source;
             export URL=$(jq '.[$SOURCE_NAME]' latest_versions.json --arg SOURCE_NAME $SOURCE -r);
-            echo $URL;
-            echo $source;
+            curl http://$IP/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16
           done;
 #  execute-latest-release:
 #  download-validation-reports:
