--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -258,13 +258,13 @@ jobs:
           name: datasets_metadata
       - name: Run snapshot validation on data
         run: |
-          export IP=${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}
           export KEYS=$(jq '. | keys[]' latest_versions.json -r)
           for source in $KEYS;
           do
             export SOURCE=$source;
             export URL=$(jq '.[$SOURCE_NAME]' latest_versions.json --arg SOURCE_NAME $SOURCE -r);
-            echo "http://$IP/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
+            echo "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
+            curl "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
           done;
 #  execute-latest-release:
 #  download-validation-reports:
