--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -165,7 +165,7 @@ jobs:
           echo $(kubectl get services gtfs-validator-snapshot-service -o json) > info.json
           IP=$(jq -r '.status.loadBalancer.ingress[0] .ip' info.json)
           echo $DATASETS
-          echo "::set-ouaatput name=ip::$IP"
+          echo "::set-output name=ip::$IP"
     outputs:
       ip: ${{ steps.set-snapshot-service-ip.outputs.ip }}
   set-up-kubernetes-for-latest-release:
@@ -259,6 +259,14 @@ jobs:
       - name: Run snapshot validation on data
         run: |
           echo ${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}
+          export KEYS=$(jq '. | keys[]' latest_versions.json -r)
+          for source in $KEYS;
+          do
+            export SOURCE=$source;
+            export URL=$(jq '.[$SOURCE_NAME]' latest_versions.json --arg SOURCE_NAME $SOURCE -r);
+            echo "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
+            curl "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
+          done;
 #  execute-latest-release:
 #  download-validation-reports:
 #    runs-on: ubuntu-latest
