--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -266,6 +266,7 @@ jobs:
             export URL=$(jq '.[$SOURCE_NAME]' latest_versions.json --arg SOURCE_NAME $SOURCE -r);
             echo "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
             curl "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16" &
+          wait
           done;
 #  execute-latest-release:
 #  download-validation-reports:
