--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -248,26 +248,26 @@ jobs:
           path: datasets_metadata
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
-  execute-snapshot-version:
-    needs: [ set-up-kubernetes-for-snapshot, fetch-urls ]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Retrieve metadata from previous job
-        uses: actions/download-artifact@v2
-        with:
-          name: datasets_metadata
-      - name: Run snapshot validation on data
-        run: |
-          echo ${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}
-          export KEYS=$(jq '. | keys[]' latest_versions.json -r)
-          for source in $KEYS;
-          do
-            export SOURCE=$source;
-            export URL=$(jq '.[$SOURCE_NAME]' latest_versions.json --arg SOURCE_NAME $SOURCE -r);
-            echo "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
-            ab -n 1 -c 1000 "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16" &
-          done;
-          wait
+#  execute-snapshot-version:
+#    needs: [ set-up-kubernetes-for-snapshot, fetch-urls ]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Retrieve metadata from previous job
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: datasets_metadata
+#      - name: Run snapshot validation on data
+#        run: |
+#          echo ${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}
+#          export KEYS=$(jq '. | keys[]' latest_versions.json -r)
+#          for source in $KEYS;
+#          do
+#            export SOURCE=$source;
+#            export URL=$(jq '.[$SOURCE_NAME]' latest_versions.json --arg SOURCE_NAME $SOURCE -r);
+#            echo "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
+#            curl "http://${{ needs.set-up-kubernetes-for-snapshot.outputs.ip }}/?url=$URL&datasetId=$source&commitSha=${{ github.sha }}&threads=16"
+#          done;
+#          wait
 #  execute-latest-release:
 #  download-validation-reports:
 #    runs-on: ubuntu-latest
