do not execute test when the following files are modified: - Dockerfile - .gitignore - LICENSE

--- a/.github/workflows/end_to_end_big.yml
+++ b/.github/workflows/end_to_end_big.yml
@@ -5,11 +5,16 @@ on:
     branches: [ master ]
     paths-ignore:
       - '**.md'
+      - 'Dockerfile'
+      - '.gitignore'
+      - 'LICENSE'
   pull_request:
     branches: [ master ]
     paths-ignore:
       - '**.md'
-
+      - 'Dockerfile'
+      - '.gitignore'
+      - 'LICENSE'
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
