--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -53,7 +53,7 @@ jobs:
           image_name: gtfs-validator-repo/gtfs-validator-gke
           image_tag: ${{ steps.prep.outputs.versionTag }}
           docker_context: ./springboot/
-          gar_hostname: us-east1-docker.pkg.dev
+          gar_hostname: us-east1-b-docker.pkg.dev
           gar_project: ${{ secrets.GCP_PROJECT_ID }}
           gar_service_account: ${{ secrets.GCP_SA_KEY }}
           tag_latest_version: true
@@ -95,7 +95,7 @@ jobs:
           image_name: gtfs-validator-repo/gtfs-validator-gke
           image_tag: ${{ steps.previoustag.outputs.tag }}
           docker_context: ./
-          gar_hostname: us-east1-docker.pkg.dev
+          gar_hostname: us-east1-b-docker.pkg.dev
           gar_project: ${{ secrets.GCP_PROJECT_ID }}
           gar_service_account: ${{ secrets.GCP_SA_KEY }}
           tag_latest_version: true
@@ -125,9 +125,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-#      - name: Create GKE snapshot cluster
-#        run: |
-#          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
+      - name: Create GKE snapshot cluster
+        run: |
+          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1-b
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
@@ -144,11 +144,10 @@ jobs:
         uses: google-github-actions/get-gke-credentials@main
         with:
           cluster_name: gtfs-validator-snapshot-cluster
-          location: us-east1
+          location: us-east1-b
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Create secrets
         run: |
-          kubectl delete secret ${{secrets.SNAPSHOT_SECRET_NAME}}
           kubectl create secret generic ${{secrets.SNAPSHOT_SECRET_NAME}} --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
       - name: Deploy to GKE
         id: deploy-to-gke
@@ -182,9 +181,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-#      - name: Create GKE cluster
-#        run: |
-#          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
+      - name: Create GKE cluster
+        run: |
+          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1-b
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
@@ -201,11 +200,10 @@ jobs:
         uses: google-github-actions/get-gke-credentials@main
         with:
           cluster_name: gtfs-validator-latest-release-cluster
-          location: us-east1
+          location: us-east1-b
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Create secrets
         run: |
-          kubectl delete secret ${{secrets.LATEST_RELEASE_SECRET_NAME}}
           kubectl create secret generic ${{secrets.LATEST_RELEASE_SECRET_NAME}} --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
       - name: Deploy to GKE
         id: deploy-to-gke
