use zone us-east-1b

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -53,7 +53,7 @@ jobs:
           image_name: gtfs-validator-repo/gtfs-validator-gke
           image_tag: ${{ steps.prep.outputs.versionTag }}
           docker_context: ./springboot/
-          gar_hostname: us-east1-b-docker.pkg.dev
+          gar_hostname: us-east1-docker.pkg.dev
           gar_project: ${{ secrets.GCP_PROJECT_ID }}
           gar_service_account: ${{ secrets.GCP_SA_KEY }}
           tag_latest_version: true
@@ -95,7 +95,7 @@ jobs:
           image_name: gtfs-validator-repo/gtfs-validator-gke
           image_tag: ${{ steps.previoustag.outputs.tag }}
           docker_context: ./
-          gar_hostname: us-east1-b-docker.pkg.dev
+          gar_hostname: us-east1-docker.pkg.dev
           gar_project: ${{ secrets.GCP_PROJECT_ID }}
           gar_service_account: ${{ secrets.GCP_SA_KEY }}
           tag_latest_version: true
