--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -125,9 +125,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE snapshot cluster
-        run: |
-          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
+#      - name: Create GKE snapshot cluster
+#        run: |
+#          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
@@ -181,9 +181,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE cluster
-        run: |
-          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
+#      - name: Create GKE cluster
+#        run: |
+#          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
