--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -53,7 +53,7 @@ jobs:
           image_name: gtfs-validator-repo/gtfs-validator-gke
           image_tag: ${{ steps.prep.outputs.versionTag }}
           docker_context: ./springboot/
-          gar_hostname: us-west1-docker.pkg.dev
+          gar_hostname: us-east4-docker.pkg.dev
           gar_project: ${{ secrets.GCP_PROJECT_ID }}
           gar_service_account: ${{ secrets.GCP_SA_KEY }}
           tag_latest_version: true
@@ -95,7 +95,7 @@ jobs:
           image_name: gtfs-validator-repo/gtfs-validator-gke
           image_tag: ${{ steps.previoustag.outputs.tag }}
           docker_context: ./
-          gar_hostname: us-west1-docker.pkg.dev
+          gar_hostname: us-east4-docker.pkg.dev
           gar_project: ${{ secrets.GCP_PROJECT_ID }}
           gar_service_account: ${{ secrets.GCP_SA_KEY }}
           tag_latest_version: true
@@ -127,7 +127,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE snapshot cluster
         run: |
-          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-west1
+          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east4
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
@@ -144,7 +144,7 @@ jobs:
         uses: google-github-actions/get-gke-credentials@main
         with:
           cluster_name: gtfs-validator-snapshot-cluster
-          location: us-west1
+          location: us-east4
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Create secrets
         run: |
@@ -183,7 +183,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE cluster
         run: |
-          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-west1
+          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east4
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
@@ -200,7 +200,7 @@ jobs:
         uses: google-github-actions/get-gke-credentials@main
         with:
           cluster_name: gtfs-validator-latest-release-cluster
-          location: us-west1
+          location: us-east4
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Create secrets
         run: |
