--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -127,7 +127,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE snapshot cluster
         run: |
-          gcloud container clusters create gtfs-validator-snapshot-cluster --zone us-east4 --num_nodes 50
+          gcloud container clusters create gtfs-validator-snapshot-cluster --zone us-east4 --num-nodes 50
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
@@ -183,7 +183,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE cluster
         run: |
-          gcloud container clusters create gtfs-validator-latest-release-cluster --zone us-east4 --num_nodes 50
+          gcloud container clusters create gtfs-validator-latest-release-cluster --zone us-east4 --num-nodes 50
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s|{{VALIDATION_REPORT_BUCKET}}|gtfs-validator-reports|" deployment.yaml
