--- a/main/build.gradle
+++ b/main/build.gradle
@@ -51,7 +51,7 @@ shadowJar {
     archiveVersion = project.version
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
 mainClassName = 'org.mobilitydata.gtfsvalidator.cli.Main'
 compileJava.options.encoding = "UTF-8"
 
