--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -12,9 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: '11'
+          distribution: 'adopt'
       - name: Cache Gradle packages
         uses: actions/cache@v2
         with:
