--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -106,7 +106,7 @@ jobs:
           name: datasets_metadata
           path: datasets_metadata
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      matrix: ${{ fromJson(steps.set-matrix.outputs.matrix) }}
   get-latest-changes-report:
     needs: [ pack, fetch-urls ]
     runs-on: ubuntu-latest
