--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -86,7 +86,7 @@ jobs:
         id: set-matrix
         run: |
           python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d datasets_metadata -a gtfs_archives_ids.json -l latest_versions.json
-          DATASETS=$(jq . datasets_metadata/latest_versions.json -r)
+          DATASETS=$(jq . datasets_metadata/latest_versions.json -R)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
         env:
@@ -111,7 +111,7 @@ jobs:
     needs: [ pack, fetch-urls ]
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ needs.fetch-urls.outputs.matrix }}
+      matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
     steps:
       - name: Retrieve metadata from previous job
         uses: actions/download-artifact@v2
