push item to GCS

--- a/.github/workflows/artifact_url_retrieval.yml
+++ b/.github/workflows/artifact_url_retrieval.yml
@@ -59,10 +59,17 @@ jobs:
         with:
           name: Application - cli executable .jar -- ${{ steps.prep.outputs.versionTag }}
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
       - name: Retrieve run id
         run: echo ${{ github.run_id }}
       - name: Download jar
         run: |
           curl https://api.github.com/repos/MobilityData/gtfs-validator/actions/runs/${{ github.run_id }}/artifacts | jq '.artifacts[0].archive_download_url' -r
           ls -a
-
+      - name: Push jar to GCS
+        run: gsutil cp ./RULES.md gs://gtfs-validator-jars/
