--- a/.github/workflows/artifact_url_retrieval.yml
+++ b/.github/workflows/artifact_url_retrieval.yml
@@ -69,7 +69,7 @@ jobs:
         run: echo ${{ github.run_id }}
       - name: Download jar
         run: |
-          URL=$(https://api.github.com/repos/MobilityData/gtfs-validator/actions/runs/${{ github.run_id }}/artifacts | jq '.artifacts[0].archive_download_url' -r)
+          URL=$(curl https://api.github.com/repos/MobilityData/gtfs-validator/actions/runs/${{ github.run_id }}/artifacts | jq '.artifacts[0].archive_download_url' -r)
           curl $URL
           ls -a
       - name: Push jar to GCS
