--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -10,4 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get url list
-        run: curl https://gtfs-validator.free.beeceptor.com/urls
+        run: DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls | jq tostring)
+          echo "::set-output name=matrix::$DATASETS"
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+  get-latest-changes-report:
+    needs: [ fetch-urls ]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
+    steps:
+      - run: echo ${{ matrix.data }}
