--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: get url list
         run: DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls | jq tostring)
+          echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
