--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get url list
-        run: DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls | jq tostring)
-          echo $DATASETS
-          echo "::set-output name=matrix::$DATASETS"
+        run: |
+        DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls | jq tostring)
+        echo $DATASETS
+        echo "::set-output name=matrix::$DATASETS"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
   get-latest-changes-report:
