--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -13,8 +13,7 @@ jobs:
     steps:
       - id: set-matrix
         run: |
-          DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls)
-          echo $DATASETS
+          DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls | jq tostring)
           echo "::set-output name=matrix::$DATASETS"
   get-latest-changes-report:
     needs: [ fetch-urls ]
@@ -22,4 +21,5 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
     steps:
-      - run: echo ${{ matrix.data }}
+      - run: |
+          echo ${{ matrix.data }}
