--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls)
+          DATASETS=$(curl https://gtfs-validator2.free.beeceptor.com/urls | jq tostring)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
     outputs:
