--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          DATASETS=$(curl https://gtfs-validator2.free.beeceptor.com/test | jq .include)
+          DATASETS=$(curl https://gtfs-validator2.free.beeceptor.com/test | jq tostring)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
     outputs:
@@ -21,7 +21,7 @@ jobs:
     needs: fetch-urls
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(needs.set-matrix.outputs.matrix) }}
+      matrix: ${{ fromJSON(needs.set-matrix.outputs.matrix) }}
     steps:
       - name: display matrix data
         run: echo ${{ matrix.data }}
