try test endpoint

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -12,8 +12,17 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          DATASETS=$(curl https://gtfs-validator2.free.beeceptor.com/urls)
+          DATASETS=$(curl https://gtfs-validator2.free.beeceptor.com/test)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
+  get-latest-changes-report:
+    needs: fetch-urls
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
+    steps:
+      - name: display matrix data
+        run: echo ${{ matrix.project }}
+
