try urls endpoint

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/test)
+          DATASETS=$(curl https://gtfs-validator.free.beeceptor.com/urls)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
     outputs:
@@ -24,5 +24,5 @@ jobs:
       matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
     steps:
       - name: display matrix data
-        run: echo ${{ matrix.project }}
+        run: echo ${{ matrix.data }}
 
