--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -24,5 +24,7 @@ jobs:
       matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
     steps:
       - name: display matrix data
-        run: echo ${{ matrix.data }}
+        run: |
+        echo ${{ matrix.data }}
+        for el in ${{ matrix.data }}; do echo $el; done
 
