--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,7 +25,4 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-
-          echo ${{ matrix.data }}
-          for el in ${{ matrix.data }}; do echo $el; done
-
+          echo ${{ matrix }}
