--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,4 +25,7 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-          echo ${{ matrix }}
+          for el in ${{ matrix.data }}[@]
+          do
+            echo $el
+          done;
