try other thing

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,4 +25,4 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-          echo ${{ matrix.data }}[*]
+          echo $(${{ matrix.data }}[*])
