--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,4 +25,5 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-          echo $(${{ matrix.data }}[*])
+          array=${{ matrix.data }}
+          echo $array
