print 1st element of array

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -27,4 +27,5 @@ jobs:
         run: |
           array=${{ matrix.data }}
           echo $array
+          echo ${array[0]}
           echo ${#array[*]}
