--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -26,6 +26,4 @@ jobs:
       - name: display matrix data
         run: |
           array=${{ matrix.data }}
-          echo $array
-          echo ${array[0]}
-          echo ${#array[*]}
+          printf '%s\n' "${array[@]}"
