use shell script

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -25,9 +25,4 @@ jobs:
     steps:
       - name: display matrix data
         run: |
-          echo ${{ matrix.data}}
-          my_array=${{ matrix.data}}
-          for t in ${my_array[@]};
-          do
-            echo $t
-          done
+          ./run.sh ${{ matrix.data}}
