treat array differently

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -26,6 +26,6 @@ jobs:
       - uses: actions/checkout@v1
       - name: display matrix data
         run: |
-          my_array="(${{ matrix.data }})"
-          echo $my_array
-          sh run.sh "${my_array[@]}"
+          array_string="${{ matrix.data }}"
+          IFS=" " read -a data_array <<< $array_string
+          sh run.sh ${my_array[@]}
