use var data_array

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -28,4 +28,4 @@ jobs:
         run: |
           array_string="${{ matrix.data }}"
           IFS=" " read -a data_array <<< $array_string
-          sh run.sh ${my_array[@]}
+          sh run.sh ${data_array[@]}
