display array content

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -28,4 +28,5 @@ jobs:
         run: |
           array_string="${{ matrix.data }}"
           IFS=" " read -a data_array <<< $array_string
+          echo "data_array"[@]
           sh run.sh ${data_array[@]}
