avoid OOM and always persist artifacts
- use 1 thread

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -74,6 +74,7 @@ jobs:
           array_string="${{ matrix.data }}"
           bash run.sh $array_string
       - name: Persist reports
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: reports_all
